# megacity-region-data

./: .gitignore  .travis.yml  LICENSE  MCR-schema.md  Makefile.am  README.md  TODO.md  configure.ac  mcr-aws-map.json  megacityregions.json  test-aws.js  test-mcr.js
